Upgrade dependencies; Untrack .idea.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.gradle
+/.gradle/
+/.idea/
+/build/
+/captures/
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
-/build
-/captures
+*.iml
