[Fix] Fix typo.

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ VERSION_NAME=1.0.5
 VERSION_CODE=6
 GROUP=me.zhanghai.android.materialedittext
 
-POM_DESCRIPTION=A Material design EditTextBar with consistent appearance
+POM_DESCRIPTION=A Material Design EditTextBar with consistent appearance
 POM_URL=https://github.com/DreaminginCodeZH/MaterialEditText
 POM_SCM_URL=https://github.com/DreaminginCodeZH/MaterialEditText
 POM_SCM_CONNECTION=scm:git@github.com:DreaminginCodeZH/MaterialEditText.git
